--- a/DataChecks/audienceUsage/audience_usage.ipynb
+++ b/DataChecks/audienceUsage/audience_usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0673dcfd",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "28f8c75e",
    "metadata": {},
    "outputs": [],
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "27ba8f7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"Pendix\"\n",
-    "fromdate = \"20250806\"\n",
-    "todate = \"20250806\"\n",
+    "customer = \"LILLYDOO\"\n",
+    "fromdate = \"20251215\"\n",
+    "todate = \"20251216\"\n",
     "source = \"googleAdwords\"\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "184a0bab",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1f967f15",
    "metadata": {},
    "outputs": [],
@@ -80,22 +80,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4f5fbe78",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def return_conv(x):\n",
+    "    print(x)\n",
+    "    if x is None:\n",
+    "        return None\n",
+    "    if isinstance(x, int):\n",
+    "        return x\n",
+    "    for entry in x:\n",
+    "        if entry[\"name\"] == \"checkout_completed\":\n",
+    "            return entry[\"count\"]\n",
+    "    return None\n",
+    "#conv = [{'name': 'product_added_to_cart', 'count': 66}, {'name': 'checkout_completed', 'count': 6}, {'name': 'payment_info_submitted', 'count': 18}, {'name': 'checkout_started', 'count': 25}]\n",
+    "au[\"checkout_completed\"] = au[\"conversions\"].apply(lambda x: return_conv(x))\n",
     "au"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "915e9096",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "2d242677",
    "metadata": {},
    "outputs": [],
    "source": [
-    "au[[\"date\",\"spend\",\"treatment\",\"sourceName\"]]"
+    "au.groupby(\"sourceName\")[\"checkout_completed\"].value_counts(dropna=False)"
    ]
   },
   {
