--- a/DataChecks/conversion_probabilities/check_conversion_probabilities.ipynb
+++ b/DataChecks/conversion_probabilities/check_conversion_probabilities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aa55102c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8a0c44a4",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0f4a055a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"Kfzteile24\"\n",
+    "customer = \"to teach\"\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
     "account_id = return_account_ids()\n",
@@ -46,29 +46,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9a1f54fe",
+   "execution_count": null,
+   "id": "54d9005e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile_path = db_client.return_databricks_client()\n",
-    "table_path = f\"{profile_path}#delta_share_events.{account_id}.conversion_probabilities_view_30_outlook\"#_6819bcae879ec1741090bc71\"\n",
-    "df = delta_sharing.load_as_pandas(table_path)#, limit=1000)"
+    "models = call_api_with_accountId(\n",
+    "    f\"{url}/models/query\",\n",
+    "    accountID=account_id,\n",
+    "    content={},\n",
+    "    logger=logging,\n",
+    ")\n",
+    "models = pd.json_normalize(models)\n",
+    "goals = models[\"goal\"].unique().tolist()\n",
+    "goals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4f7efacf",
+   "execution_count": 74,
+   "id": "9a1f54fe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.DataFrame()\n",
+    "for goal in goals:\n",
+    "    profile_path = db_client.return_databricks_client()\n",
+    "    table_path = f\"{profile_path}#delta_share_events.{account_id}.conversion_probabilities_view_30_outlook_{goal}\"#_6819bcae879ec1741090bc71\"\n",
+    "    try:\n",
+    "        df_goals = delta_sharing.load_as_pandas(table_path, limit=100000)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        df_goals = pd.DataFrame()\n",
+    "    if goal != goals[0]:\n",
+    "        df = pd.concat([df,df_goals])\n",
+    "    else:\n",
+    "        df = df_goals.copy()\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "id": "f6b5d7ff",
    "metadata": {},
    "outputs": [],
@@ -78,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "id": "0f7c2c3d",
    "metadata": {},
    "outputs": [],
@@ -88,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "id": "f730e1b7",
    "metadata": {},
    "outputs": [],
@@ -98,17 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "aab3a9f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"date\"].value_counts()"
+    "df.groupby(\"goal\")[\"date\"].value_counts().reset_index().sort_values(by=\"date\", ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "8353bf2c",
    "metadata": {},
    "outputs": [],
@@ -118,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 80,
    "id": "b0a99358",
    "metadata": {},
    "outputs": [],
@@ -130,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "id": "ec932b06",
    "metadata": {},
    "outputs": [],
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 82,
    "id": "1950c7ab",
    "metadata": {},
    "outputs": [],
@@ -155,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "id": "539fade7",
    "metadata": {},
    "outputs": [],
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "id": "c6cbe760",
    "metadata": {},
    "outputs": [],
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c5a4cf29",
    "metadata": {},
    "outputs": [],
@@ -202,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "eecc0427",
    "metadata": {},
    "outputs": [],
