--- a/DataChecks/datashift/check_datashift.ipynb
+++ b/DataChecks/datashift/check_datashift.ipynb
@@ -79,39 +79,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"account\"] = df[\"account_id\"].apply(lambda x: [acc[\"name\"] for acc in account_id if acc[\"id\"] == x])\n",
-    "df[\"account\"] = df[\"account\"].apply(lambda x: x[0] if isinstance(x, list) and len(x) > 0 else None)\n",
+    "df[\"workspace\"] = df[\"workspace_id\"].apply(lambda x: [acc[\"name\"] for acc in account_id if acc[\"id\"] == x])\n",
+    "df[\"workspace\"] = df[\"workspace\"].apply(lambda x: x[0] if isinstance(x, list) and len(x) > 0 else None)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3cf79351",
+   "execution_count": 8,
+   "id": "08735ead",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(\"account\")[\"mean_count_sessions\"].mean().round(2).sort_values(ascending=False)"
+    "df.to_csv(\"DataChecks/datashift/check_datashift_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d03ab33e",
+   "id": "3cf79351",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(\"account\")[\"mean_count_sessions\"].describe()#.sort_values(ascending=False)"
+    "df.groupby(\"workspace\")[\"mean_count_sessions\"].mean().round(2).sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "id": "d03ab33e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"workspace\")[\"mean_count_sessions\"].describe()#.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "3ac022ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(\"account\")[\"mean_count_anonymousIds\"].mean().sort_values(ascending=False)"
+    "df.groupby(\"workspace\")[\"mean_count_anonymousIds\"].mean().sort_values(ascending=False)"
    ]
   },
   {
@@ -124,23 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "eeffda5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"JunoAndMe\"\n",
-    "min_date = pd.to_datetime(df[\"created\"].max()) - timedelta(days=90)\n",
+    "customer = \"Tchibo\"\n",
+    "min_date = pd.to_datetime(df[\"created\"].max()) - timedelta(days=20)\n",
     "min_date = min_date.strftime(\"%Y-%m-%d\")\n",
     "print(f\"Filtering data for customer: {customer} since {min_date}\")\n",
-    "df_customer = df[df[\"account\"] == customer]\n",
+    "df_customer = df[df[\"workspace\"] == customer]\n",
     "df_customer[\"created\"] = pd.to_datetime(df_customer[\"created\"])\n",
     "df_customer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c045e5c3",
    "metadata": {},
    "outputs": [],
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6e8b8b9a",
    "metadata": {},
    "outputs": [],
@@ -177,14 +187,14 @@
     "    x=\"created\",\n",
     "    y=\"mean_count_anonymousIds\",\n",
     "    marker=\"o\",\n",
-    "    hue=\"account\"\n",
+    "    hue=\"workspace\"\n",
     ")\n",
     "sns.lineplot(\n",
     "    data=df_customer[df_customer[\"created\"]>=min_date],\n",
     "    x=\"created\",\n",
     "    y=\"count_anonymouIds_max_date\",\n",
     "    marker=\"x\",\n",
-    "    hue=\"account\",\n",
+    "    hue=\"workspace\",\n",
     "    color=\"o\"\n",
     ")\n",
     "plt.xticks(rotation=45)\n",
@@ -197,6 +207,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "52a741a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e10d9fd",
    "metadata": {},
    "outputs": [],
    "source": []
