--- a/DataChecks/exclusion_dates/exclusion_dates.ipynb
+++ b/DataChecks/exclusion_dates/exclusion_dates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c852db23",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "496ac9f1",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "a77d6440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"/Users/karolinegriesbach/Documents/Innkeepr/Git/evaluation-and-execution-scripts/DataChecks/exclusion_dates/exclusion_dates.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "b3c11858",
    "metadata": {},
    "outputs": [],
@@ -58,13 +68,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df[\"customer\"]==\"kfzteile24\"].values"
+    "print(\"training\")\n",
+    "customer=\"tchibo\"\n",
+    "df[df[\"customer\"]==customer][\"ignore_training\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0b3e3414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"targeting\")\n",
+    "df[df[\"customer\"]==customer][\"ignore_targeting\"].values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b3e3414",
+   "id": "118acf2c",
    "metadata": {},
    "outputs": [],
    "source": []
