--- a/DataChecks/models/list_models.ipynb
+++ b/DataChecks/models/list_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e7088650",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7bbbab35",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import re\n",
     "import logging\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from datetime import datetime\n",
     "from general_functions.conncet_s3 import S3Connection\n",
     "from general_functions.sanitize_accout_name import sanitize_account_name\n",
@@ -30,12 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "eabefe8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = \"2025-08-01\"\n",
+    "save_path = f\"DataChecks/models/all_models.parquet\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7adcd520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = f\"DataChecks/models/all_models.parquet\"\n",
     "s3 = S3Connection()\n",
     "account_ids = return_account_ids()\n",
     "url = return_api_url()\n",
@@ -50,7 +61,7 @@
     "        models = call_api_with_accountId(\n",
     "            endpoint_url=f\"{url}/models/query\",\n",
     "            accountID=account[\"id\"],\n",
-    "            content={\"ceated\": {\"$gte\": \"2025-08-01\"}},\n",
+    "            content={\"ceated\": {\"$gte\": date}},\n",
     "            logger=logging\n",
     "        )\n",
     "        models = pd.json_normalize(models)\n",
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "9abc0b24",
    "metadata": {},
    "outputs": [],
@@ -99,32 +110,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
+   "id": "7deaa13e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_models = pd.read_parquet(save_path)\n",
+    "all_models.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "ee89e5df",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_models = all_models.sort_values(by=[\"path\",\"dir_date\",\"file_date\"]).reset_index(drop=True)\n",
-    "all_models = all_models.drop_duplicates(subset=\n",
-    "                                        [\"audience\",\"path\",\"created\"],keep=\"first\")\n",
-    "all_models"
+    "print(all_models.shape)\n",
+    "all_models_filtered = all_models.drop_duplicates(subset=[\"audience\",\"path\"]) \n",
+    "#subset=[\"audience\",\"path\",\"created\"],keep=\"last\")\n",
+    "all_models_filtered[\"type\"] = None\n",
+    "all_models_filtered[\"type\"] = np.where(all_models_filtered[\"path\"].astype(\"string\").str.contains(\"-aud-\"), \"causal\", \"conversion\")                                   \n",
+    "all_models_filtered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "cec4abf2",
+   "execution_count": 11,
+   "id": "46320692",
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff = all_models[all_models[\"dir_date\"] != all_models[\"file_date\"]]\n",
-    "diff"
+    "all_models_filtered[\"Quartal\"] = None\n",
+    "all_models_filtered[\"Quartal\"] = np.where(\n",
+    "    (all_models_filtered[\"created\"]>=\"2025-01-01\") & (all_models_filtered[\"created\"]<=\"2025-03-31\"),\n",
+    "    \"Q1/25\", all_models_filtered[\"Quartal\"]\n",
+    ")\n",
+    "all_models_filtered[\"Quartal\"] = np.where(\n",
+    "    (all_models_filtered[\"created\"]>=\"2025-04-01\") & (all_models_filtered[\"created\"]<=\"2025-06-30\"),\n",
+    "    \"Q2/25\", all_models_filtered[\"Quartal\"]\n",
+    ")\n",
+    "all_models_filtered[\"Quartal\"] = np.where(\n",
+    "    (all_models_filtered[\"created\"]>=\"2025-07-01\") & (all_models_filtered[\"created\"]<=\"2025-09-30\"),\n",
+    "    \"Q3/25\", all_models_filtered[\"Quartal\"]\n",
+    ")\n",
+    "all_models_filtered[\"Quartal\"] = np.where(\n",
+    "    (all_models_filtered[\"created\"]>=\"2025-10-01\") & (all_models_filtered[\"created\"]<=\"2025-12-31\"),\n",
+    "    \"Q4/25\", all_models_filtered[\"Quartal\"]\n",
+    ")\n",
+    "all_models_filtered[\"Quartal\"] = np.where(\n",
+    "    (all_models_filtered[\"created\"]>=\"2026-01-01\") & (all_models_filtered[\"created\"]<=\"2026-03-31\"),\n",
+    "    \"Q1/26\", all_models_filtered[\"Quartal\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3140d390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_types_by_quartal = all_models_filtered.groupby(by=[\"Quartal\"])[\"type\"].value_counts(dropna=False).reset_index()\n",
+    "model_types_by_quartal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ce1e6b27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_types_by_quartal = pd.pivot(model_types_by_quartal, index=\"Quartal\", columns=\"type\", values=\"count\")\n",
+    "model_types_by_quartal[\"causal percentage\"] = model_types_by_quartal[\"causal\"] / (model_types_by_quartal[\"causal\"] + model_types_by_quartal[\"conversion\"])\n",
+    "model_types_by_quartal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b38b82da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_by_account"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46320692",
+   "id": "0bc44e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_by_account = all_models_filtered.groupby(by=[\"Quartal\",\"account\"])[\"type\"].value_counts(dropna=False).reset_index()\n",
+    "model_types_by_quartal_and_account = pd.pivot(models_by_account, index=[\"Quartal\",\"account\"], columns=\"type\", values=\"count\")\n",
+    "model_types_by_quartal_and_account[\"causal percentage\"] = model_types_by_quartal_and_account[\"causal\"] / (model_types_by_quartal_and_account[\"causal\"] + model_types_by_quartal_and_account[\"conversion\"])\n",
+    "model_types_by_quartal_and_account=model_types_by_quartal_and_account.reset_index()\n",
+    "model_types_by_quartal_and_account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52327df6",
    "metadata": {},
    "outputs": [],
    "source": []
