--- a/DataChecks/performance_incidents/check_performance_incidents.ipynb
+++ b/DataChecks/performance_incidents/check_performance_incidents.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"Vioneers\"\n",
+    "customer = \"Asambeauty\"\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
     "account_id = return_account_ids()\n",
@@ -69,34 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "dc99f973",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[[\"account\",\"workspace\"]]"
+    "df[df[\"ik_treatment\"]==\"#0014 // UGC // BLEM // BAU III // 05.09.2025\"][[\"incident_date\",\"date\",\"audience_name\",\"ik_campaign\",\"ik_treatment\",\"cg_campaign\",\"cg_treatment\",\"ik_cpa_modified\", \"cg_cpa\", \"count_incident_cpa\", \"incident_cpa\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "c3ed9d90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(\"ik_campaign\")[\"date\"].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3cf43280",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "campaigns = [\"🟢🟡#DACH // BLEM // UGC + Static // BAU // 01.04.2025\"]\n",
-    "df_filtered = df[df[\"ik_campaign\"].isin(campaigns)]\n",
-    "df_filtered[\"date\"].min(), df_filtered[\"date\"].max(), df_filtered[\"incident_cpa\"].value_counts()"
+    "df[df[\"ik_treatment\"].str.contains(\"Magic\").fillna(False)][\"ik_campaign\"].value_counts()"
    ]
   },
   {
