--- a/DataChecks/prefect_logs/check_prefect_logs.ipynb
+++ b/DataChecks/prefect_logs/check_prefect_logs.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "0dfea1f0",
    "metadata": {},
    "outputs": [],
@@ -62,22 +62,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "21dd0e48",
+   "execution_count": 12,
+   "id": "7cf41727",
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = df[df[\"node_name\"].isin([\"x4llarge\"])].sort_values(by=\"timestamp\")\n",
-    "temp = df[df[\"timestamp\"] >= \"2025-09-01\"].sort_values(by=\"timestamp\")\n",
-    "temp = temp[temp[\"timestamp\"] <= \"2025-09-04\"].sort_values(by=\"timestamp\")\n",
-    "\n",
-    "\n",
     "temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "21dd0e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"date\"] = pd.to_datetime(df[\"timestamp\"]).dt.date\n",
+    "temp = df[df[\"node_name\"].isin([\"x4llarge\"])].sort_values(by=\"timestamp\")\n",
+    "temp = df[df[\"timestamp\"] >= \"2026-01-05\"].sort_values(by=\"timestamp\")\n",
+    "#temp = temp[temp[\"timestamp\"] <= \"2025-09-04\"].sort_values(by=\"timestamp\")\n",
+    "\n",
+    "\n",
+    "temp.groupby(\"date\")[\"node_name\"].value_counts().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f08bfcf0",
    "metadata": {},
    "outputs": [],
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0f17da86",
    "metadata": {},
    "outputs": [],
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0d3c8f51",
    "metadata": {},
    "outputs": [],
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8c16cd01",
    "metadata": {},
    "outputs": [],
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d8157163",
    "metadata": {},
    "outputs": [],
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6625bbc1",
    "metadata": {},
    "outputs": [],
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "39a517ce",
    "metadata": {},
    "outputs": [],
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b01d9153",
    "metadata": {},
    "outputs": [],
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "42425b86",
    "metadata": {},
    "outputs": [],
@@ -179,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d050c445",
    "metadata": {},
    "outputs": [],
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b710bd80",
    "metadata": {},
    "outputs": [],
@@ -210,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "90d51c5e",
    "metadata": {},
    "outputs": [],
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "601db4cb",
    "metadata": {},
    "outputs": [],
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "48a5e85c",
    "metadata": {},
    "outputs": [],
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4f99a1e7",
    "metadata": {},
    "outputs": [],
@@ -258,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ce3cbfa8",
    "metadata": {},
    "outputs": [],
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6fd2a2bd",
    "metadata": {},
    "outputs": [],
