--- a/DataChecks/profiles/check_profiles_databricks.ipynb
+++ b/DataChecks/profiles/check_profiles_databricks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "58cb5b62",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1134c162",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "03de51f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"JunoAndMe\"\n",
+    "customer = \"LILLYDOO\"\n",
     "account_id = return_account_ids()\n",
     "account_id = [acc[\"id\"] for acc in account_id if acc[\"name\"] == customer]\n",
     "account_id = account_id[0]"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "9f93f85b",
    "metadata": {},
    "outputs": [],
@@ -52,21 +52,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a3f7b0df",
+   "execution_count": 8,
+   "id": "78b20217",
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_for_anonymous_ids = ['68e60a081d063538d0dcb729', '64b562133991bf268073131d', '68e635bf1d063538d02ca781', '68e659381d063538d0644f2b', '64f8ba49f15d9306f00d9c4d', '68e6be97600b2140865b22d3', '68e5193c120f694f532d7643', '68e6d5a2600b2140868bca0e']\n",
-    "test = df[df[\"anonymousId\"].isin(check_for_anonymous_ids)]\n",
-    "print(test[\"anonymousId\"].nunique())\n",
-    "test\n"
+    "df.to_parquet(f\"DataChecks/profiles/{customer}_profiles.parquet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "84b32ee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f99b008e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"email_sha256_externalIds\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "24adaf76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"email_sha256_externalIds\"].dropna().to_csv(\"lillydoo_hashed_emails.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6b85c4",
+   "id": "711b04c9",
    "metadata": {},
    "outputs": [],
    "source": []
