--- a/DataChecks/targeting_history/check_targeting_history.ipynb
+++ b/DataChecks/targeting_history/check_targeting_history.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "04090570",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d3ced92",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import awswrangler as wr\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
@@ -28,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "78483cf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "audience = \"68bafd105287866a2c449ec0\"\n",
+    "audience = \"68b69fb82e5f2d9a58ce3439\"\n",
     "customer = \"Tchibo\"\n",
-    "date = \"20250906\"\n",
+    "date = \"20260131\"\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
     "account_id = return_account_ids()\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "de4134a3",
    "metadata": {},
    "outputs": [],
@@ -55,27 +56,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0ac76349",
+   "execution_count": 58,
+   "id": "a8472bbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
+   "id": "3c6003b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"audience\"].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c17252b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"treatment\"].value_counts(dropna=False)"
+    "df[\"treatment\"].value_counts(dropna=False)\n",
+    "# caual: 68b69fe02e5f2d9a58ce5239\n",
+    "#03.01.2026: 3570854 (25.01 exkludiert)\n",
+    "#31.01.2026: 3537452 (25.01 exkludiert)\n",
+    "# conversions: 68b69fb82e5f2d9a58ce3439 (Innkeepr - Body - Likely Purchaser - Seed #2)\n",
+    "#03.01.2026: 3.877.832 (25.01 inkludiert)\n",
+    "#31.01.2026: 3.870.757 (25.01 inkludiert)\n",
+    "\n",
+    "# conversions: 68b69fb82e5f2d9a58ce3439 (Innkeepr - Body - Likely Purchaser - Seed #2)\n",
+    "# 03.01.2026: 3.877.832 \n",
+    "# 31.01.2026: 3.870.757 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
+   "id": "6e3aaea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"date\"] = pd.to_datetime(df[\"session.date\"]).dt.date\n",
+    "df[\"date\"].value_counts().sort_index(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "b63adaaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573627f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.index[-int(len(df)*0.5)::], int(len(df)*0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bf97c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"new_treatment\" in df.columns:\n",
+    "    df = df.drop(columns=[\"new_treatment\"])\n",
+    "df = df.sort_values(by=[\"counterfactual\"]).reset_index(drop=True)\n",
+    "df.loc[df.index[-int(len(df)*0.c):],\"new_treatment\"] = audience\n",
+    "df[\"new_treatment\"] = df[\"new_treatment\"].fillna(\"control\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12101c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"new_treatment\")[\"counterfactual\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f751357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"treatment\")[\"counterfactual\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff8bde8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['prev_treatment'] = df['treatment'].shift()\n",
+    "df['is_switch'] = df['treatment'] != df['prev_treatment']\n",
+    "index = df[df['is_switch']==True].index\n",
+    "print(f\"index = {index}\")\n",
+    "print(f\"min_perc = {index[0]/len(df)}\")\n",
+    "print(f\"max_perc = {index[1]/len(df)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9298b6d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeefe3cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by=\"conv_prob\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a156ef65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"index\"] = df.index\n",
+    "temp = df[[\"index\",\"treatment\"]]\n",
+    "temp[\"value\"] = np.where(temp[\"treatment\"] == audience, 2, 1)\n",
+    "sns.lineplot(data=temp, x=\"index\", y=\"value\", hue=\"treatment\", marker=\"o\")\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a052c2ec",
    "metadata": {},
    "outputs": [],
@@ -102,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ec943956",
    "metadata": {},
    "outputs": [],
@@ -112,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2557f94d",
    "metadata": {},
    "outputs": [],
