--- a/DataChecks/targeting_history_meta_conversion_update/check_conversion_action_history.ipynb
+++ b/DataChecks/targeting_history_meta_conversion_update/check_conversion_action_history.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "78483cf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"LILLYDOO\"\n",
-    "start_date = \"20251014\"\n",
-    "end_date = \"20251015\"\n",
+    "customer = \"More\"\n",
+    "start_date = \"20260116\"\n",
+    "end_date = \"20260116\"\n",
     "date_range = pd.date_range(start=start_date, end=end_date, freq=\"D\").strftime(\"%Y%m%d\").tolist()\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "de4134a3",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "eec0016c",
    "metadata": {},
    "outputs": [],
@@ -84,8 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6276b2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"session.date\")[\"anonymousId\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea9dc810",
    "metadata": {},
    "outputs": [],
    "source": []
