--- a/DataChecks/treatments/treatments_via_audience_id.ipynb
+++ b/DataChecks/treatments/treatments_via_audience_id.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "21f9a4c8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "acddc8f2",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "1e7d2deb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"Asambeauty\"\n",
-    "audience_id = \"6687daf21767991e3bdfb414\"\n",
+    "customer = \"Autobatterienbilliger\"\n",
+    "audience_id = \"65419970c55281d53441fc26\"\n",
+    "#6900d2ca857b19e246f602d7\", 6900d2b1857b19e246f5bda6\n",
     "url = return_api_url()\n",
     "print(f\"url = {url}\")\n",
     "account_id = return_account_ids()\n",
@@ -43,7 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "id": "4fce4790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "46222905",
    "metadata": {},
    "outputs": [],
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "d9d932d5",
    "metadata": {},
    "outputs": [],
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "68f2a27f",
    "metadata": {},
    "outputs": [],
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "4ccb5062",
    "metadata": {},
    "outputs": [],
@@ -100,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "632447e7",
    "metadata": {},
    "outputs": [],
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "a2f4ecde",
    "metadata": {},
    "outputs": [],
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ea8c53f5",
    "metadata": {},
    "outputs": [],
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "67e55ddd",
    "metadata": {},
    "outputs": [],
@@ -139,16 +150,9 @@
     "    vc = treatments.groupby(by=[\"relates_to.campaign.name\",\"id\"])['relates_to.adset.name'].value_counts()\n",
     "else:\n",
     "    vc = treatments.groupby(by=[\"relates_to.campaign.name\",\"id\"])['relates_to.assetGroup.name'].value_counts()\n",
-    "vc.reset_index()"
+    "vc=vc.reset_index()\n",
+    "vc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "185a5fc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
