--- a/DataChecks/treatments/treatments_via_source_and_string.ipynb
+++ b/DataChecks/treatments/treatments_via_source_and_string.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9a1bcff5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "163f3cd6",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5ea4184b",
    "metadata": {},
    "outputs": [],
    "source": [
     "customer = \"ESN\"\n",
-    "source = \"facebook\"\n",
+    "source = \"googleAdwords\"\n",
     "url = return_api_url()\n",
     "url = \"https://api.innkeepr.ai/api\"\n",
     "print(f\"url = {url}\")\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2c5fead1",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "403c4468",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "319a3ebb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treatments.to_csv(\"treatments.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c2170adc",
    "metadata": {},
    "outputs": [],
@@ -90,17 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "02036b8c",
+   "execution_count": null,
+   "id": "167d2d98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "treatments"
+    "treatments[\"properties.type\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4f1afd08",
    "metadata": {},
    "outputs": [],
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0d033288",
    "metadata": {},
    "outputs": [],
@@ -127,34 +137,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bfae43cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vc_filtered = vc[\n",
-    "    (\n",
-    "        vc[\"relates_to.adset.name\"].str.contains(\"Isoclear\", case=False) #|\n",
-    "        #vc[\"relates_to.campaign.name\"].str.contains(\"Öl\", case=False) |\n",
-    "        #vc[\"relates_to.campaign.name\"].str.contains(\"Oel\", case=False) \n",
-    "    )\n",
+    "vc_filtered = treatments[\n",
+    "        # treatments[\"relates_to.campaign.name\"].str.contains(\"🟠 DE // TOFU // ABO Sales // Creative Testing // ALL Formats // 06.08.2025\", case=False).fillna(False) |\n",
+    "        # treatments[\"relates_to.campaign.name\"].str.contains(\"🟠 DE // TOFU // ABO Sales // Inkeepr Creative Testing // ALL Formats // 15.10.2025\", case=False).fillna(False) |\n",
+    "        # treatments[\"relates_to.campaign.name\"].str.contains(\"🟠🟢 DEAT // TOFU // ABO Sales // Creative Testing // ALL Formats // 21.10.2025\", case=False).fillna(False) \n",
+    "        #treatments[\"relates_to.campaign.name\"].str.contains(\"🟠🟢 DEAT // TOFU // ABO Sales // Innkeepr Testing // Iced Coffee // Statics // 01.12.2025\", case=False).fillna(False)\n",
+    "        treatments[\"relates_to.campaign.name\"].str.contains(\"VMS\", case=False).fillna(False)\n",
+    "        #treatments[\"relates_to.campaign.name\"].str.contains(\"bottom5p_css\", case=False).fillna(False)\n",
     "    ]\n",
-    "vc_filtered"
+    "vc_filtered.drop_duplicates(subset=[\"relates_to.campaign.name\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2d27b275",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vc_filtered[\"relates_to.adset.name\"].unique()"
+    "vc_filtered[\"relates_to.campaign.name\"].drop_duplicates().sort_values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c78c6f80",
    "metadata": {},
    "outputs": [],
@@ -165,13 +176,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "aa132448",
    "metadata": {},
    "outputs": [],
    "source": [
     "treatments_list = vc_filtered[\"id\"].unique().tolist()\n",
-    "len(treatments_list), treatments_list"
+    "len(treatments_list), treatments_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5d707b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(treatments[\"id\"].unique().tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7c39a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treatments[\"created\"].min(), treatments[\"created\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaba7e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treatments[\"id\"].unique().tolist()"
    ]
   },
   {
@@ -181,86 +222,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "externalIds = treatments_filtered[\"relates_to.assetGroup.id\"].dropna().unique().tolist() #4 ['6599333130', '6627040705', '6624995271', '6624995298']\n",
+    "externalIds = treatments_filtered[\"externalId\"].dropna().unique().tolist() #4 ['6599333130', '6627040705', '6624995271', '6624995298']\n",
+    "campaign_name = treatments_filtered[\"relates_to.campaign.name\"].dropna().unique().tolist()\n",
+    "print(campaign_name)\n",
+    "print(len(externalIds), externalIds)\n",
     "test = send_to_innkeepr_api_paginated(\n",
     "    f\"{url}/signals/query\",\n",
     "    account_id,\n",
-    "    {\"externalId\":treatments_filtered[\"externalId\"].dropna().unique().tolist()},\n",
+    "    {\"relates_to.campaign.name\":campaign_name},#externalId\n",
     "    logging\n",
     ")\n",
     "test"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07f168f8",
+   "cell_type": "markdown",
+   "id": "fa42cfe2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ids_to_check = [\n",
-    "    \"689d2ee3d3c5574d637e2f38\",\n",
-    "    \"689d2ee3d3c5574d6d51ba72\",\n",
-    "    \"689d2ee3d3c5574da13cc04f\",\n",
-    "    \"689d2ee3d3c5579d4248c90b\",\n",
-    "    \"689d2ee3d3c557ab891e2681\",\n",
-    "    \"689d2ee3d3c557ab8a3b7288\",\n",
-    "    \"689d2ee3d3c557ab8d3480f6\",\n",
-    "    \"689d2ee3d3c557ab8e18fc21\",\n",
-    "    \"689d2ee3d3c557ab977c2ea8\",\n",
-    "    \"689d2ee3d3c557c69c701a23\",\n",
-    "    \"689d2ee3d3c557c79d369ca6\",\n",
-    "    \"689d2ee4d3c5570ed570909f\",\n",
-    "    \"689d2ee4d3c5574d4b1b0f37\",\n",
-    "    \"689d2ee4d3c5574da916b78d\",\n",
-    "    \"689d2ee4d3c5574daa60a258\",\n",
-    "    \"689d2ee4d3c55764a55ceea8\",\n",
-    "    \"689d2ee4d3c55764a9716424\",\n",
-    "    \"689d2ee4d3c557761b6d8b48\",\n",
-    "    \"689d2ee4d3c55776e41c65e1\",\n",
-    "    \"689d2ee4d3c557bee62f6c6c\",\n",
-    "    \"689d2ee4d3c557c6b15f0f97\",\n",
-    "    \"689e8159d3c5576ee2309739\",\n",
-    "    \"68ae532dd3c5571934415f58\",\n",
-    "]\n",
-    "treatments_views = send_to_innkeepr_api_paginated(\n",
-    "    f\"{url}/treatments/query\",\n",
-    "    account_id,\n",
-    "    {\"id\":ids_to_check},\n",
-    "    logging\n",
-    ")\n",
-    "treatments_views = pd.json_normalize(treatments_views)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "027498ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "treatments_views"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffc59510",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "signals = send_to_innkeepr_api_paginated(\n",
-    "    f\"{url}/signals/query\",\n",
-    "    account_id,\n",
-    "    {\"externalId\":['123', '1435494216', '267300181', '752742929']},\n",
-    "    logging\n",
-    ")\n",
-    "signals"
+    "# Treatments via List"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c8789011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treatment_file = pd.read_csv(\"/Users/karolinegriesbach/Downloads/SEA Suchkampagnen DACH.csv\",sep=\";\")\n",
+    "treatment_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef35a80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#treatment_file = treatment_file[treatment_file[\"Kampagnenname\"].str.contains(\"BRAND\", case=False)]\n",
+    "treatment_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a0c7bab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treatments[\"relates_to.campaign.name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d8f7e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used_treatments = pd.DataFrame()\n",
+    "for campaign_name in treatment_file[\"Kampagnenname\"].unique().tolist(): #[\"BRAND\"]: #\n",
+    "    temp = treatments[treatments[\"relates_to.campaign.name\"].str.contains(campaign_name, case=False, regex=False)]\n",
+    "    if len(temp) == 0:\n",
+    "        print(f\"No treatment found for campaign_name = {campaign_name}\")\n",
+    "        continue\n",
+    "    used_treatments = pd.concat([used_treatments, temp])\n",
+    "    print(f\"Added treatments for campaign_name = {campaign_name}, used_treatments length = {len(used_treatments)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fcb9e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used_treatments[[\"id\",\"relates_to.campaign.name\"]].to_csv(f\"/Users/karolinegriesbach/Downloads/used_treatments_brand_sea_{customer}.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1358dbe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = treatments[(treatments[\"relates_to.campaign.name\"].str.contains(\"[P]_SEARCH_BRAND_\", regex=False))&(treatments[\"relates_to.campaign.name\"].str.contains(\":DE\"))].drop_duplicates(subset=[\"relates_to.campaign.name\"]) \n",
+    "temp[\"relates_to.campaign.name\"].to_csv(\"treatments_search_brand_de.csv\", index=False)\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7459d81",
    "metadata": {},
    "outputs": [],
    "source": []
