--- a/DataChecks/views/check_views.ipynb
+++ b/DataChecks/views/check_views.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "96b868b9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "725f3ac7",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import logging\n",
     "import delta_sharing\n",
     "import pandas as pd\n",
+    "from datetime import datetime\n",
     "\n",
     "import general_functions.databricks_client as db_client\n",
     "from general_functions.return_account_ids import return_account_ids\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2cdeb02",
    "metadata": {},
    "outputs": [],
@@ -44,29 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "aeaa4546",
    "metadata": {},
    "outputs": [],
    "source": [
     "profile_path = db_client.return_databricks_client()\n",
     "table_path = f\"{profile_path}#delta_share_events.{account_id}.features_view_30_outlook\" #features_view_30_outlook\"\n",
-    "df = delta_sharing.load_as_pandas(table_path, limit=20000)"
+    "df = delta_sharing.load_as_pandas(table_path)#, limit=20000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0ca5a070",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet(\"/Users/karolinegriesbach/Documents/Innkeepr/Git/Analysis/T3_Smartbidding_Updates/data/targeting_history/LILLYDOO/with_db_view_67d1b8102eb78f8bcc5e2c57/feat_views_conversions.parquet\")"
+    "df.to_parquet(f\"DataChecks/views/{customer}_{datetime.today().date()}.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f44cc759",
    "metadata": {},
    "outputs": [],
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "81760d0f",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a9322aa9",
    "metadata": {},
    "outputs": [],
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "871faf85",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f29e3fa3",
    "metadata": {},
    "outputs": [],
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fe7b588c",
    "metadata": {},
    "outputs": [],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cf49be02",
    "metadata": {},
    "outputs": [],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "190aefc5",
    "metadata": {},
    "outputs": [],
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a3fa34a0",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3a55b9ea",
    "metadata": {},
    "outputs": [],
