--- a/DataChecks/performance_review/check_performance_review.ipynb
+++ b/DataChecks/performance_review/check_performance_review.ipynb
@@ -133,8 +133,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2508284a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(by=[\"created\"])\n",
+    "dupl_subset = df.columns.tolist()\n",
+    "dupl_subset.remove(\"created\")\n",
+    "print(dupl_subset)\n",
+    "df = df.drop_duplicates(subset=dupl_subset, keep=\"last\")\n",
+    "vc_count_treatments = df.groupby(by=[\"date\"])[\n",
+    "        \"treatment\"\n",
+    "    ].value_counts()\n",
+    "\n",
+    "vc_count_treatments[vc_count_treatments > 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0086c6fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[(df[\"date\"]==\"2025-12-08\")&(df[\"treatment\"]==\"690bfde04a633fe0067ab3fb\")].drop_duplicates(subset=dupl_subset, keep=\"last\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd80a439",
    "metadata": {},
    "outputs": [],
    "source": []
