--- a/DataChecks/profiles/check_profiles_via_api.ipynb
+++ b/DataChecks/profiles/check_profiles_via_api.ipynb
@@ -32,17 +32,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer = \"JunoAndMe\"\n",
+    "customer = \"Asambeauty\"\n",
     "dict_account_ids =  return_account_ids()\n",
     "account_id = [account[\"id\"] for account in dict_account_ids if account[\"name\"] == customer][0]\n",
     "api_url = \"https://targeting.innkeepr.ai/api\"\n",
     "col_last_modified = \"lastModified\"\n",
-    "min_date = \"2025-08-31T20:00:00.000Z\""
+    "min_date = \"2025-12-22T00:00:00.000Z\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "01f6776d",
    "metadata": {},
    "outputs": [],
@@ -50,28 +50,28 @@
     "profiles = send_to_innkeepr_api_paginated(\n",
     "        f\"{api_url}/profiles/query\",\n",
     "        account_id,\n",
-    "        {\"anonymousId\":\"68e843e86551590395627593\"},\n",
-    "        #{col_last_modified: {\"$gte\": min_date}},\n",
+    "        #{\"anonymousId\":\"68e843e86551590395627593\"},\n",
+    "        {col_last_modified: {\"$gte\": min_date}},\n",
     "        logging.getLogger(),\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6caace39",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open('DataChecks/profiles/profiles.json', 'w') as f:\n",
+    "with open(f'DataChecks/profiles/profiles_{customer}.json', 'w') as f:\n",
     "    json.dump(profiles, f, indent=4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bd62b894",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "da177967",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "85ebe10f",
    "metadata": {},
    "outputs": [],
@@ -104,23 +104,36 @@
     "    return None\n",
     "profiles_df[\"name\"] = profiles_df[\"externalIds\"].apply(lambda x: return_name(x))\n",
     "profiles_df[\"cookie_id\"] = profiles_df[\"externalIds\"].apply(lambda x: return_name(x, key_name=\"id\"))\n",
+    "\n",
     "profiles_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "032609f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "profiles_df[\"name\"].value_counts()"
+    "print(f\"Unique anonymousIds: {profiles_df['anonymousId'].nunique()}\")\n",
+    "print(f\"Modified: {profiles_df[col_last_modified].min()} - {profiles_df[col_last_modified].max()}\")\n",
+    "profiles_df.drop_duplicates(subset=[\"anonymousId\",\"name\"])[\"name\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "719f37f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "147/4284"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719f37f9",
+   "id": "d2149425",
    "metadata": {},
    "outputs": [],
    "source": []
